FIX: Header vertical spacing, codel/r padding, search form

--- a/src/scss/overwrite.scss
+++ b/src/scss/overwrite.scss
@@ -8,33 +8,43 @@ h1, h2, h3, h4, h5, h6{
 }
 
 h1{
-	font-size:60px;
-	margin-bottom:24px;
+	font-size:3.75rem;
+	margin-bottom:1.5rem;
+}
+
+div h2:not(:first-child) {
+    margin-bottom: 0px;
+    margin-top: 1.5rem;
 }
 
 h2{
-	font-size:42px;
-	margin-bottom:22px;
+	font-size:2.625rem;
+	margin-bottom:1.375rem;
+}
+
+div h2:not(:first-child), div h3:not(:first-child) {
+    margin-bottom: 0px;
+    margin-top: 1.375rem;
 }
 
 h3{
-	font-size:34px;
-	margin-bottom:22px;
+	font-size:2.125rem;
+	margin-bottom:1.375rem;
 }
 
 h4{
-	font-size:28px;
-	margin-bottom:20px;
+	font-size:1.75rem;
+	margin-bottom:1.25rem;
 }
 
 h5{
-	font-size:24px;
-	margin-bottom:20px;
+	font-size:1.5rem;
+	margin-bottom:1.25rem;
 }
 
 h6{
-	font-size:22px;
-	margin-bottom:20px;
+	font-size:1.375rem;
+	margin-bottom:1.25rem;
 }
 
 h1 strong,h2 strong,h3 strong,h4 strong,h5 strong,h6 strong {
@@ -519,7 +529,7 @@ dd {
 
 a.btn,.btn:focus {
 	outline:0;
-	
+
 }
 
 .btn-medium {
@@ -957,11 +967,11 @@ font-size: 10px;
    background-color: none;
   background-image: none;
   background-repeat: repeat-x;
-  filter: none; 
+  filter: none;
   text-decoration: none;
   -webkit-box-shadow: none;
      -moz-box-shadow: none;
-          box-shadow: none;		  
+          box-shadow: none;
 }
 .navbar .nav > .active > a,
 .navbar .nav > .active > a:hover,
@@ -969,7 +979,7 @@ font-size: 10px;
   color: #fff;
    background-image: none;
   background-image: none;
-  filter: none;  
+  filter: none;
   text-decoration: none;
   -webkit-box-shadow: none;
      -moz-box-shadow: none;
@@ -1032,7 +1042,7 @@ font-size: 10px;
 
 .dropdown-menu li > a:hover,
 .dropdown-menu li > a:focus,
-.dropdown-submenu:hover > a, 
+.dropdown-submenu:hover > a,
 .dropdown-menu .active > a,
 .dropdown-menu .active > a:hover {
   color: #ffffff;
@@ -1429,9 +1439,9 @@ font-weight:600;
           border-radius: 2px;
 }
 
-
-
-
+pre code {
+    padding: 1rem;
+}
 
 
 
